Update index.html to trigger deployment

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Redirecting...</title>
     <meta http-equiv="refresh" content="0; URL=https://oussamanaji.github.io/portfolio/">
     <link rel="canonical" href="https://oussamanaji.github.io/portfolio/">
+    <!-- Updated for deployment -->
 </head>
 <body>
     <p>If you are not redirected automatically, follow this <a href="https://oussamanaji.github.io/portfolio/">link to the portfolio</a>.</p>
